# SFML_BOILERPLATE

./: CMakeLists.txt
src/: main.cpp
